<resources>
    <string name="app_name">Dermanosis</string>
    <string name="title_activity_main_home">MainActivityBeranda</string>
    <string name="title_home">Beranda</string>
    <string name="title_saran">Saran</string>
    <string name="title_profile">Profil</string>
    <string name="camera_x">CameraX</string>
    <string name="gallery">Galeri</string>


    <!--label-->
    <string name="camera">Kamera</string>
    <string name="upload">Unggah</string>
    <string name="panduan">Panduan</string>
    <string name="deskripsi">Deskripsi</string>

    <!--home-->
    <string name="Desc_camera">Kamera</string>
    <string name="Desc_upload">Upload Gambar</string>
    <string name="Desc_panduan">Panduan</string>
    <string name="Desc_deskripsi">Artikel</string>
    <string name="Desc_profile">Profil</string>

    <!--camera-->
    <string name="Title_camera">Kamera</string>
    <string name="result">Hasil</string>

    <!--custom view-->
    <string name="error_email">Silahkan masukkan Email Anda</string>
    <string name="invalid_email">Email tidak valid!</string>
    <string name="password_more_6">Password harus lebih dari 6 karakter</string>
    <string name="copyright">© 2022 Bangkit Capstone Team C22-PS039</string>
    <string name="title_register_page">Selamat bergabung</string>
    <string name="title_login_page">Selamat datang kembali</string>
    <string name="message_welcome_page">Ingin mengetahui jenis penyakit kulit akan tetapi Anda masih merasa bingung ? Jangan khawatir, kami akan membantu Anda. Yuk bergabung di Skin Diagnosis App!</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_account">Sudah punya akun?</string>
    <string name="not_have_account">Belum punya akun?</string>
    <string name="fill_register_form">Mohon isi form registrasi dengan benar</string>

    <!-- profile -->
    <string name="setting">Pengaturan</string>
    <string name="dark_mode">Mode gelap</string>
    <string name="logout">Keluar</string>
    <string name="language">Bahasa</string>
    <string name="about_app">Tentang aplikasi</string>
    <string name="contact_us">Kontak kami</string>

    <!-- saran -->
    <string name="type_something">Ketikkan sesuatu...</string>
    <string name="send_success">Berhasil terkirim</string>
    <string name="send_error">Gagal terkirim</string>

    <!-- panduan -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Kamera</string>
    <string name="tab_text_2">Unggah</string>
    <string name="content_tab_camera">Panduan dengan camera</string>
    <string name="content_tab_upload">Panduan dengan unggah</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="upload_sukses">Sukses upload</string>
    <string name="Upload_Gagal">Gagal Upload</string>
    <string name="camera_step_1">Daftarkan akun anda terlebih dahulu dengan mengisi Nama, Email, Password pada form yang telah disediakan</string>
    <string name="camera_step_2">Jika sudah mendaftar, masukkan Email dan Password untuk masuk ke Aplikasi</string>
    <string name="camera_step_3">Pada Dashboard Beranda, klik ikon Kamera untuk melakukan memproses scan deteksi dari hasil kamera</string>
    <string name="camera_step_4">Klik tombol Kamera, kemudian izinkan akses kamera dari device Anda</string>
    <string name="camera_step_5">Arahkan kamera Anda pada kulit yang ingin dideteksi dan ambil gambar</string>
    <string name="camera_step_6">Terakhir, klik tombol Hasil, maka sistem secara otomatis akan menampilkan hasil deteksi dari gambar yang Anda ambil dari kamera</string>
    <string name="upload_step_1">Daftarkan akun anda terlebih dahulu dengan mengisi Nama, Email, Password pada form yang telah disediakan</string>
    <string name="upload_step_2">Jika sudah mendaftar, masukkan Email dan Password untuk masuk ke Aplikasi</string>
    <string name="upload_step_3">Pada Dashboard Beranda, klik ikon Unggah untuk melakukan memproses scan deteksi dari hasil unggah gambar</string>
    <string name="upload_step_4">Izinkan akses mengambil file gambar dari device Anda</string>
    <string name="upload_step_5">Kemudian, pilih gambar yang ingin dideteksi</string>
    <string name="upload_step_6">Terakhir, klik tombol Hasil, maka sistem secara otomatis akan menampilkan hasil deteksi dari gambar yang Anda ambil dari galeri</string>

    <!--prediction-->
    <string name="prediction">prediction</string>
    <string name="presentase">presentase</string>
    <string name="obat">penanganan dan obat</string>

    <!-- contact us -->
    <string name="fullname_member_team">Nama lengkap</string>
    <string name="email_member">Email</string>
    <string name="phone_number">Nomer HP</string>
    <string name="detail_member">Detail member</string>

    <string name="name_1">Ivani</string>
    <string name="name_2">Nitis</string>
    <string name="name_3">Ridho</string>
    <string name="name_4">Kukuh</string>
    <string name="name_5">Irkham</string>
    <string name="name_6">Haya</string>

    <string name="member_1">Muhammad Ivani</string>
    <string name="member_2">Muhammad Nitis Jatnika Permana</string>
    <string name="member_3">Muhammad Ridho Abdillah</string>
    <string name="member_4">Kukuh Biyantama</string>
    <string name="member_5">Muhammad Irkham Hidayat</string>
    <string name="member_6">Haya Rohmatunnisa</string>

    <string name="email_1">muh.ivani55@students.unnes.ac.id</string>
    <string name="email_2">nitismuhammad10@gmail.com</string>
    <string name="email_3">111201912211@mhs.dinus.ac.id</string>
    <string name="email_4">111201912208@mhs.dinus.ac.id</string>
    <string name="email_5">111201912362@mhs.dinus.ac.id</string>
    <string name="email_6">hayarohmatunnisa14@students.unnes.ac.id</string>

    <string name="phone_1">0822 4442 5154</string>
    <string name="phone_2">0821 2660 7503</string>
    <string name="phone_3">0877 0898 3363</string>
    <string name="phone_4">0821 7583 4153</string>
    <string name="phone_5">0895 1260 4675</string>
    <string name="phone_6">0888 0672 2401</string>

</resources>