<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.register.RegisterActivity">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/two_ellipse" />

    <TextView
        android:id="@+id/register_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image1"
        android:layout_centerHorizontal="true"
        android:text="@string/title_register_page"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:alpha="0"/>

    <TextView
        android:id="@+id/register_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:alpha="0"
        android:text="@string/fill_register_form"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_text2"
        android:orientation="vertical"
        android:padding="30dp">

        <com.capstonebangkit.skin_diagnosis_app.ui.customview.NameEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@drawable/button_shape_white"
            android:hint="@string/name"
            android:paddingLeft="10dp"
            android:alpha="0"/>

        <com.capstonebangkit.skin_diagnosis_app.ui.customview.EmailEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_shape_white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:alpha="0"/>

        <com.capstonebangkit.skin_diagnosis_app.ui.customview.PasswordEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_shape_white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:alpha="0"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_centerHorizontal="true"
        android:width="350dp"
        android:alpha="0"
        android:background="@drawable/button_shape_blue"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btn_register"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textSize="14sp"
            android:alpha="0"/>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginStart="5dp"
            android:textColor="@color/birumuda"
            android:textStyle="bold"
            android:textSize="14sp"
            android:alpha="0"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</RelativeLayout>