<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ui.login.LoginActivity">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/two_ellipse" />

    <TextView
        android:id="@+id/login_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image1"
        android:layout_centerHorizontal="true"
        android:text="Welcome Back!"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:alpha="0"/>

    <ImageView
        android:id="@+id/image2"
        android:layout_width="155dp"
        android:layout_height="155dp"
        android:layout_below="@+id/login_text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:src="@drawable/img_login" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image2"
        android:orientation="vertical"
        android:padding="30dp">

        <com.capstonebangkit.skin_diagnosis_app.ui.customview.EmailEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="14dp"
            android:alpha="0"
            android:background="@drawable/button_shape_white"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp" />

        <com.capstonebangkit.skin_diagnosis_app.ui.customview.PasswordEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="14dp"
            android:alpha="0"
            android:background="@drawable/button_shape_white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_centerHorizontal="true"
        android:width="350dp"
        android:alpha="0"
        android:background="@drawable/button_shape_blue"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/btnLogin"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvHaventAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_account"
            android:textSize="14sp"
            android:alpha="0"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginStart="5dp"
            android:textColor="@color/birumuda"
            android:textStyle="bold"
            android:textSize="14sp"
            android:alpha="0"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar_login"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>